--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
 		<div class="container">
 
 			<div class ="row">
-				<div class = "col-md-3">
+				<div class = "col-xs-2 col-md-3">
 					<img class = "aboutImage" src="img/about.jpg">
 				</div>
 
-				<div class = "col-md-9">
+				<div class = "col-xs-10 col-md-9">
 					
-					<h4>Hello!</h4>
-					<p style="font-size: 25px">My name is Jin Xu from New York. I am a passionate software developer and tech enthusiast. I love to tackle real-world challenges. I majored in Computer Science (GPA 3.9/4.0) at the University of Pennsylvania. </p>
+					<h4 style="font-size: 28px">Hello!</h4>
+					<p style="font-size: 28px">My name is Jin Xu from New York. I am a passionate software developer and tech enthusiast. I love to tackle real-world challenges. I majored in Computer Science (GPA 3.9/4.0) at the University of Pennsylvania. </p>
 
-					<p style="font-size: 25px"> Programming Skills: Java, Python, JavaScript and C. I am familiar with SQL, MongoDB as well as some front end and back end web development framework as React.js and Node.js. One of my favorite project (Recipe search and review system) was a full stack web application using react.js as front end, node.js as server side connected to MySQL database for querying the user searches. This Web app was also awarded "Best all-around" project among 50+ project teams.</p>
+					<p style="font-size: 28px"> Programming Skills: Java, Python, JavaScript and C. I am familiar with SQL, MongoDB as well as some front end and back end web development framework as React.js and Node.js. One of my favorite project (Recipe search and review system) was a full stack web application using react.js as front end, node.js as server side connected to MySQL database for querying the user searches. This Web app was also awarded "Best all-around" project among 50+ project teams.</p>
 
-					<p style="font-size: 25px">Fun fact:  I am a career changer, I worked 8 years in chemical engineering segment and found passion in Computers and informations while learning about operational research, process control etc. which led me to study Computer Science at Upenn. </p>
+					<p style="font-size: 28px">Fun fact:  I am a career changer, I worked 8 years in chemical engineering segment and found passion in Computers and informations while learning about operational research, process control etc. which led me to study Computer Science at Upenn. </p>
 
 				</div>
 
